feat: add FindDeploymentById endpoint, update actions to leave a link to the deployed environment
